--- a/result.html
+++ b/result.html
@@ -6,17 +6,19 @@
 </head>
 <body>
 
-<div id="app">
-    {{ message }}
-</div>
+<ul id="app">
+  <li v-for="item in items">
+    {{ item }}
+  </li>
+</ul>
 
 <script type="text/javascript">
-    new Vue({
+    var example1 = new Vue({
       el: '#app',
       data: {
-        message: 'Hello Vue.js!'
+        items: ['Foo','Bar']
       }
-    });
+    })
 </script>
 
 </body>
