--- a/result.html
+++ b/result.html
@@ -2,23 +2,50 @@
 <html lang="en-US">
 <head>
   <title>My Vue.js App</title>
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body { font: 13px Helvetica, Arial; }
+    form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
+    form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
+    form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
+    #messages { list-style-type: none; margin: 0; padding: 0; }
+    #messages li { padding: 5px 10px; }
+    #messages li:nth-child(odd) { background: #eee; }
+  </style>
   <script src="https://cdn.jsdelivr.net/vue/latest/vue.js"></script>
+  <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+  <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
 </head>
 <body>
 
+<ul id="messages"></ul>
 <ul id="app">
   <li v-for="item in items">
-    {{ item }}
+    <a href="http://localhost:8888/{{ item }}" target="_blank">{{ item }}</a>   {{ parseInt( item.substring(item.lastIndexOf('-')+1, item.lastIndexOf('.')) )}} 
   </li>
 </ul>
 
-<script type="text/javascript">
+<script>
+  var socket = io();
+  $('form').submit(function(){
+    socket.emit('chat message', $('#m').val());
+    $('#m').val('');
+    return false;
+  });
+  // on the client side when we capture a chat message 
+  socket.on('chat message show', function(oMsg){
+
+  $('#messages').append($('<li>').text(oMsg));
+    var aMsg = jQuery.makeArray( oMsg );
     var example1 = new Vue({
       el: '#app',
       data: {
-        items: ['Foo','Bar']
+        items: aMsg
       }
     })
+
+  });
+
 </script>
 
 </body>
